# ocaml-tiff

./: .gitignore  CONTRIBUTING.md  HACKING.md  LICENSE  README.md  documentation.md  dune  dune-project  main.ml  main_float.ml  tiff.opam
bench/: bechamel_csv.ml  bench.ml  dune
bench/corpus/: raw_cea_lzw
examples/: checkerboard.ml  dune  ifd.ml
src/: deflate.ml  deflate.mli  dune  endian.ml  file.ml  file.mli  geoKeys.ml  geoKeys.mli  ifd.ml  ifd.mli  lzw.ml  lzw.mli  shared.ml  tiff.ml  tiff.mli  write.ml  write.mli
src/eio/: dune  tiff_eio.ml  tiff_eio.mli
src/unix/: dune  tiff_unix.ml  tiff_unix.mli  tiff_unix_stubs.c
test/: dune  test.ml  test_basic.ml  test_caching.ml  test_geotiff.ml  test_lzw.ml  test_tiff.ml
test/data/: aoh.tiff  color.tiff  multiple_uniform_ifds.tiff  normal.tiff  sparse_uint8_lzw.tiff  test_deflate.tiff  tiled_uint8_deflate.tiff  tiled_uint8_lzw.tiff  tiled_uint8_lzw_odd.tiff  tiled_uint8_lzw_predictor.tiff  tiled_uint8_uncompressed.tiff  u16bit.tiff  uneven_rows_per_strip.tiff  uniform.tiff  uniform_int8_lzw.tiff  uniform_rgb_uint8_bigtiff.tiff  uniform_rgb_uint8_lzw.tiff  uniform_uint32_lzw.tiff
testdata/: cea_lzw.tiff  jello-gray.tiff  striped_uint8_lzw.tiff  striped_uint8_lzw_odd_strip_size.tiff  striped_uint8_uncompressed.tiff  uniform_float32_lzw.tiff  uniform_float64_lzw.tiff  uniform_int16_lzw.tiff  uniform_int32_lzw.tiff  uniform_lzw.tiff  uniform_uint16_lzw.tiff  uniform_uint8_lzw.tiff
