(mdx
 (files README.md)
 (libraries eio unix eio.core eio.unix fmt eio_main owl-base tiff))

(executable
 (name main)
 (libraries eio_main owl-base cstruct tiff))

(rule
 (alias runtest)
 (deps testdata/cea.tiff testdata/uniform.tiff testdata/jello-gray.tiff)
 (targets cea.tiff)
 (action
  (copy testdata/cea.tiff cea.tiff)))
