(mdx
 (files README.md)
 (libraries eio unix ounit2 eio.core eio.unix fmt eio_main owl-base tiff))

(executable
 (name main)
 (libraries eio_main owl-base cstruct tiff))

(rule
 (alias runtest)
 (deps
  testdata/cea.tiff
  testdata/uniform.tiff
  testdata/uniform_lzw.tiff
  testdata/jello-gray.tiff
  testdata/aoh.tiff
  testdata/uniform_float32_lzw.tiff)
 (targets cea.tiff)
 (action
  (copy testdata/cea.tiff cea.tiff)))
