(executables
 (names test_tiff test_geotiff)
 (libraries tiff eio_main ounit2 owl-base))

(rule
 (alias runtest)
 (deps ./test_tiff.exe)
 (action
  ; Important for OUnit2 to not use Unix.fork!
  (run ./test_tiff.exe -runner sequential)))

(rule
 (alias runtest)
 (deps ./test_geotiff.exe)
 (action
  ; Important for OUnit2 to not use Unix.fork!
  (run ./test_geotiff.exe -runner sequential)))

(tests
 (names test_lzw)
 (modules test_lzw)
 (libraries ounit2 tiff))
