(executables
 (names test_tiff test_geotiff)
 (modules test_tiff test_geotiff)
 (libraries tiff tiff.unix eio_main ounit2 nx))

(rule
 (alias runtest)
 (deps
  (source_tree data)
  ./test_tiff.exe)
 (action
  ; Important for OUnit2 to not use Unix.fork!
  (run ./test_tiff.exe -runner sequential)))

(rule
 (alias runtest)
 (deps
  (source_tree data)
  ./test_geotiff.exe)
 (action
  ; Important for OUnit2 to not use Unix.fork!
  (run ./test_geotiff.exe -runner sequential)))

(tests
 (names test_lzw)
 (deps
  (source_tree ../testdata))
 (modules test_lzw)
 (libraries ounit2 tiff))
